# nequip

./: .gitignore  commands.txt  confif.yaml  config_gen.ipynb  main.py  nohup.out  notes.txt  pyproject.toml  requirements.txt  test.ipynb  test.py  vis.py  visualise.ipynb
aspirin_configs/: ntrain_150_lmax_0_invariant_0_epochs_200.yaml  ntrain_150_lmax_0_invariant_1_epochs_200.yaml  ntrain_150_lmax_0_invariant_2_epochs_200.yaml  ntrain_150_lmax_0_invariant_3_epochs_200.yaml  ntrain_150_lmax_1_invariant_0_epochs_200.yaml  ntrain_150_lmax_1_invariant_1_epochs_200.yaml  ntrain_150_lmax_1_invariant_2_epochs_200.yaml  ntrain_150_lmax_1_invariant_3_epochs_200.yaml  ntrain_150_lmax_2_invariant_0_epochs_200.yaml  ntrain_150_lmax_2_invariant_1_epochs_200.yaml  ntrain_150_lmax_2_invariant_2_epochs_200.yaml  ntrain_150_lmax_2_invariant_3_epochs_200.yaml  ntrain_150_lmax_3_invariant_0_epochs_200.yaml  ntrain_150_lmax_3_invariant_1_epochs_200.yaml  ntrain_150_lmax_3_invariant_2_epochs_200.yaml  ntrain_150_lmax_3_invariant_3_epochs_200.yaml  ntrain_350_lmax_0_invariant_0_epochs_200.yaml  ntrain_350_lmax_0_invariant_1_epochs_200.yaml  ntrain_350_lmax_0_invariant_2_epochs_200.yaml  ntrain_350_lmax_0_invariant_3_epochs_200.yaml  ntrain_350_lmax_1_invariant_0_epochs_200.yaml  ntrain_350_lmax_1_invariant_1_epochs_200.yaml  ntrain_350_lmax_1_invariant_2_epochs_200.yaml  ntrain_350_lmax_1_invariant_3_epochs_200.yaml  ntrain_350_lmax_2_invariant_0_epochs_200.yaml  ntrain_350_lmax_2_invariant_1_epochs_200.yaml  ntrain_350_lmax_2_invariant_2_epochs_200.yaml  ntrain_350_lmax_2_invariant_3_epochs_200.yaml  ntrain_350_lmax_3_invariant_0_epochs_200.yaml  ntrain_350_lmax_3_invariant_1_epochs_200.yaml  ntrain_350_lmax_3_invariant_2_epochs_200.yaml  ntrain_350_lmax_3_invariant_3_epochs_200.yaml  ntrain_550_lmax_0_invariant_0_epochs_200.yaml  ntrain_550_lmax_0_invariant_1_epochs_200.yaml  ntrain_550_lmax_0_invariant_2_epochs_200.yaml  ntrain_550_lmax_0_invariant_3_epochs_200.yaml  ntrain_550_lmax_1_invariant_0_epochs_200.yaml  ntrain_550_lmax_1_invariant_1_epochs_200.yaml  ntrain_550_lmax_1_invariant_2_epochs_200.yaml  ntrain_550_lmax_1_invariant_3_epochs_200.yaml  (+65 more)
configs/: base.yaml  example.yaml  full.yaml  lmax_0_invariant_0_epochs_200.yaml  lmax_0_invariant_1_epochs_200.yaml  lmax_0_invariant_2_epochs_200.yaml  lmax_0_invariant_3_epochs_200.yaml  lmax_1_invariant_0_epochs_200.yaml  modified.yaml  (+11 more)
(+96 files in other folders)
